welcome.lessons.welcome.array.array123.Array123.scala.error
array123:6: error: type mismatch;
 found   : Unit
 required: Boolean
} 
^